apps/arcane/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-arcane
  namespace: arcane
spec:
  ports:
    - name: http
      protocol: TCP
      port: 3002
      targetPort: 3002
