apps/arcane/slice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: external-arcane-slice
  namespace: arcane
  labels:
    kubernetes.io/service-name: external-arcane
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 3002
endpoints:
  - addresses:
      - "192.168.31.214"
    conditions:
      ready: true
